--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <img src="saww.png" alt="Falkesoft Logo">
     
     <!-- Text -->
-    <h1>Website in Arbeit</h1>
-    <p>Unsere Website wird bald verfügbar sein. Bleiben Sie dran!</p>
+    <h1>Webseite in Arbeit</h1>
+    <p>Unsere Webseite wird bald verfügbar sein. Bleiben Sie dran!</p>
     
     <!-- Instagram Icon -->
     <a href="https://www.instagram.com/falkesoft" target="_blank">
